# phoenix

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  go.mod  go.sum  go_deps.bzl
cmd/s3/: BUILD.bazel  s3.go
common/go/constdef/: BUILD.bazel  otlp.go  uptrace.go
common/go/env/: BUILD.bazel  env.go
common/go/otel/: BUILD.bazel  otel.go  provider.go
common/go/x509/: BUILD.bazel  server.cer  x509.go
common/proto/google/api/: BUILD.bazel  annotations.proto
common/x509/: ca.cer  ca.key  ca_create.sh  create.sh  https_ca.cert  https_ca.key  openssl.conf  serial  server_create.sh
common/x509/grpc/: grpc_create.sh  serial  server.key
env/test/: namespace.yaml  test.yaml
project/infra/object_storage/: BUILD.bazel  file.proto  storage.proto  test.deploy.yaml
project/infra/object_storage/gateway/: BUILD.bazel  main.go
project/infra/object_storage/storage/: BUILD.bazel  handler.go  main.go
project/infra/object_storage/storage/app/: BUILD.bazel
project/infra/object_storage/storage/biz/: BUILD.bazel  context.go  error.go  file.go  service.go
project/infra/object_storage/storage/client/: BUILD.bazel  client.go
project/infra/object_storage/storage/cmd/gateway/: BUILD.bazel  main.go
project/infra/object_storage/storage/cmd/rpc/: BUILD.bazel
project/infra/object_storage/storage/proto/: BUILD.bazel  storage.proto
tools/: gopackagesdriver.sh
