load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "s3_lib",
    srcs = [
        "main.go",
        "s3.go",
    ],
    importpath = "phoenix/cmd/s3",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
        "@com_github_aws_smithy_go//:smithy-go",
    ],
)

go_binary(
    name = "s3",
    embed = [":s3_lib"],
    visibility = ["//visibility:public"],
)
