load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "otel",
    srcs = [
        "otel.go",
        "provider.go",
    ],
    importpath = "phoenix/common/go/otel",
    visibility = ["//visibility:public"],
    deps = [
        "//common/go/constdef",
        "//common/go/env",
        "@com_github_uptrace_opentelemetry_go_extra_otelzap//:otelzap",
        "@io_opentelemetry_go_contrib_propagators_aws//xray",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc//:otlploggrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc//:otlpmetricgrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_log//:log",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//metricdata",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//encoding/gzip",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
