load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_grpc_gateway//:defs.bzl", "gateway_grpc_library")

proto_library(
    name = "object_storage_proto",
    srcs = [
        "storage.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":file_proto",
        "//common/proto/google/api:annotations_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:field_mask_proto",
    ],
)

proto_library(
    name = "file_proto",
    srcs = ["file.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "object_storage_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "phoenix/project/infra/object_storage",
    protos = [
        ":file_proto",
        ":object_storage_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common/proto/google/api:annotations",
    ],
)

go_proto_library(
    name = "file_go_proto",
    importpath = "phoenix/project/infra/object_storage",
    proto = ":file_proto",
    visibility = ["//visibility:public"],
)

gateway_grpc_library(
    name = "api_gateway_library",
    importpath = "phoenix/project/infra/object_storage",
    protos = [
        ":file_proto",
        ":object_storage_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common/proto/google/api:annotations",
    ],
)
