load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "annotations_proto",
    srcs = [
        "annotations.proto",
        "http.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "annotations_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api/annotations",
    proto = ":annotations_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "annotations",
    embed = [":annotations_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/api/annotations",
    visibility = ["//visibility:public"],
)
