load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "phoenix/project/infra/object_storage/storage/client",
    visibility = ["//visibility:private"],
    deps = [
        "//common/go/x509",
        "//project/infra/object_storage/storage/proto:proto_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
