load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_grpc_gateway//:defs.bzl", "gateway_grpc_library")

proto_library(
    name = "proto_proto",
    srcs = ["storage.proto"],
    visibility = ["//visibility:public"],
    deps = ["//common/proto/google/api:annotations_proto"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "phoenix/project/infra/object_storage/storage/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = ["//common/proto/google/api:annotations"],
)

gateway_grpc_library(
    name = "api_gateway_library",
    importpath = "phoenix/project/infra/object_storage/storage/proto",
    protos = [":proto_proto"],
    visibility = ["//visibility:public"],
    deps = ["//common/proto/google/api:annotations"],
)
