load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "rpc",
    embed = [":rpc_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "rpc_lib",
    srcs = [
        "handler.go",
        "main.go",
    ],
    importpath = "phoenix/project/infra/object_storage/storage/cmd/rpc",
    visibility = ["//visibility:private"],
    deps = [
        "//common/go/x509",
        "//project/infra/object_storage/storage/proto:proto_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//encoding/gzip",
    ],
)
